--- a/Exercises Python 4 Everybody - Coursera .ipynb
+++ b/Exercises Python 4 Everybody - Coursera .ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -26,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -41,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -88,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -185,7 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 1\n",
@@ -198,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -211,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 2\n",
@@ -227,7 +241,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 3\n",
@@ -249,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -273,7 +291,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -345,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 1\n",
@@ -360,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 2\n",
@@ -410,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -439,7 +465,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -480,7 +508,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 1\n",
@@ -643,7 +673,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -769,7 +801,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 1\n",
@@ -811,7 +845,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -840,7 +876,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -873,7 +911,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -900,7 +940,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -944,7 +986,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -980,7 +1024,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 1\n",
@@ -993,7 +1039,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Practice 2\n",
@@ -1031,13 +1079,16 @@
     "    lst.append((val, key))\n",
     "    lst.sort(reverse=True)\n",
     "for key, val in lst[:10]:\n",
-    "    print(key, val)"
+    "    print(val, key)\n",
+    "fhand.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -1126,6 +1177,308 @@
     "for key in lst:\n",
     "    print (bcolors.BOLD,key,bcolors.OKBLUE,d[key],bcolors.ENDC)\n",
     "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Exercise 2: This program counts the distribution of the hour of the day for each\n",
+    "of the messages. You can pull the hour from the “From” line by finding the time\n",
+    "string and then splitting that string into parts using the colon character. Once\n",
+    "you have accumulated the counts for each hour, print out the counts, one per line,\n",
+    "sorted by hour as shown below.\n",
+    "Sample Execution:\n",
+    "python timeofday.py\n",
+    "Enter a file name: mbox-short.txt\n",
+    "04 3\n",
+    "06 1\n",
+    "07 1\n",
+    "09 2\n",
+    "'''\n",
+    "\n",
+    "class bcolors:\n",
+    "    HEADER = '\\033[95m'\n",
+    "    OKBLUE = '\\033[94m'\n",
+    "    OKGREEN = '\\033[92m'\n",
+    "    OKRED = '\\033[31m'\n",
+    "    WARNING = '\\033[93m'\n",
+    "    FAIL = '\\033[91m'\n",
+    "    ENDC = '\\033[0m'\n",
+    "    BOLD = '\\033[1m'\n",
+    "    UNDERLINE = '\\033[4m'\n",
+    "    \n",
+    "\n",
+    "file = open(\"C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\mbox-short.txt\")\n",
+    "d = dict()\n",
+    "for line in file:\n",
+    "    line = line.rstrip()\n",
+    "    if line.startswith(\"From \"):\n",
+    "        words_list = line.split()\n",
+    "        timestamp = words_list[-2]\n",
+    "        time = timestamp.split(':')\n",
+    "        hrs = time[0]\n",
+    "        #domain = email.split(\"@\")\n",
+    "        #temp = domain[1]\n",
+    "        temp = hrs\n",
+    "        d[temp] = d.get(temp,0)+1\n",
+    "        \n",
+    "'''lst = list()\n",
+    "for key, val in list(d.items()):\n",
+    "    lst.append((val, key))\n",
+    "    lst.sort(reverse=True)\n",
+    "\n",
+    "for key, val in lst[:1]:\n",
+    "    max_hr = val'''\n",
+    "            \n",
+    "lst = list(d.keys())\n",
+    "lst.sort()\n",
+    "lst_val = list(d.values())\n",
+    "lst_val.sort(reverse=True)\n",
+    "print(lst_val)\n",
+    "max_hr = lst_val[0]\n",
+    "print('\\033[1;4;94m','Hour','\\tCount',bcolors.ENDC)\n",
+    "for key in lst:\n",
+    "    if d[key] != max_hr:\n",
+    "        print ('\\033[1;94m',key,'\\t ',d[key],bcolors.ENDC)\n",
+    "    else:\n",
+    "        print ('\\033[42;1m',key,'\\t ',d[key],bcolors.ENDC)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Exercise 3: Write a program that reads a file and prints the letters in decreasing\n",
+    "order of frequency. Your program should convert all the input to lower case and\n",
+    "only count the letters a-z. Your program should not count spaces, digits, punctuation,\n",
+    "or anything other than the letters a-z. Find text samples from several different\n",
+    "languages and see how letter frequency varies between languages. Compare your\n",
+    "results with the tables at wikipedia.org/wiki/Letter_frequencies.\n",
+    "'''\n",
+    "\n",
+    "class bcolors:\n",
+    "    HEADER = '\\033[95m'\n",
+    "    OKBLUE = '\\033[94m'\n",
+    "    OKGREEN = '\\033[92m'\n",
+    "    OKRED = '\\033[31m'\n",
+    "    WARNING = '\\033[93m'\n",
+    "    FAIL = '\\033[91m'\n",
+    "    ENDC = '\\033[0m'\n",
+    "    BOLD = '\\033[1m'\n",
+    "    UNDERLINE = '\\033[4m'\n",
+    "    \n",
+    "\n",
+    "import string\n",
+    "fhand = open('C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\romeo-full.txt')\n",
+    "#fhand = open('C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\mbox-short.txt')\n",
+    "counts = dict()\n",
+    "maximum=None\n",
+    "for line in fhand:\n",
+    "    line = line.translate(str.maketrans('', '', string.punctuation))\n",
+    "    line = line.lower()\n",
+    "    words = line.split()\n",
+    "    for word in words:\n",
+    "        counts[word] = counts.get(word,0) + 1\n",
+    "# Sort the dictionary by value\n",
+    "lst = list()\n",
+    "for word, count in list(counts.items()):\n",
+    "    lst.append((count, word))\n",
+    "    if maximum == None or len(word) > maximum:\n",
+    "        maximum = len(word)\n",
+    "    lst.sort(reverse=True)\n",
+    "num_space = ' ' * maximum\n",
+    "print (maximum)\n",
+    "print('\\033[1;4m','Word',num_space,bcolors.OKBLUE,'Count',bcolors.ENDC)\n",
+    "for count, word in lst[:]:\n",
+    "    length = len(word)\n",
+    "    num_space = ' ' *(maximum - length  + 7)\n",
+    "    print ('\\033[1;94m',word,num_space,count,bcolors.ENDC)\n",
+    "    #print(val, key)\n",
+    "fhand.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Chapter 11 Regular Expressions (Need more practice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Practice 1\n",
+    "# Search for lines that start with From and have an at sign\n",
+    "\n",
+    "import re\n",
+    "hand = open('C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\mbox-short.txt')\n",
+    "for line in hand:\n",
+    "    line = line.rstrip()\n",
+    "    if re.search('^From:.+@', line):\n",
+    "        print(line)\n",
+    "hand.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Practice 2\n",
+    "# Search for lines that start with 'Details: rev='\n",
+    "# followed by numbers and '.'\n",
+    "# Then print the number if it is greater than zero\n",
+    "import re\n",
+    "hand = open('C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\mbox-short.txt')\n",
+    "for line in hand:\n",
+    "    line = line.rstrip()\n",
+    "    x = re.findall('^Details:.*rev=([0-9.]+)', line)\n",
+    "    if len(x) > 0:\n",
+    "        print(x)\n",
+    "hand.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Exercise 1: Write a simple program to simulate the operation of the grep command\n",
+    "on Unix. Ask the user to enter a regular expression and count the number\n",
+    "of lines that matched the regular expression:\n",
+    "$ python grep.py\n",
+    "Enter a regular expression: ^Author\n",
+    "mbox.txt had 1798 lines that matched ^Author\n",
+    "$ python grep.py\n",
+    "Enter a regular expression: ^Xmbox.\n",
+    "txt had 14368 lines that matched ^X-\n",
+    "$ python grep.py\n",
+    "Enter a regular expression: java$\n",
+    "mbox.txt had 4218 lines that matched java$\n",
+    "'''\n",
+    "import re\n",
+    "exp = input(\"Enter a Regular Expression: \")\n",
+    "count = 0\n",
+    "fhand = open('C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\mbox.txt')\n",
+    "for line in fhand:\n",
+    "    line = line.rstrip()\n",
+    "    if re.search(exp, line):\n",
+    "        count +=1\n",
+    "print (\"There are %d lines that match with %s in mbox.txt\" %(count, exp[1:]))\n",
+    "fhand.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Exercise 2: Write a program to look for lines of the form\n",
+    "`New Revision: 39772`\n",
+    "and extract the number from each of the lines using a regular expression and\n",
+    "the findall() method. Compute the average of the numbers and print out the\n",
+    "average.\n",
+    "'''\n",
+    "import re\n",
+    "count = 0\n",
+    "total = 0.0\n",
+    "fhand = open('C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\mbox-short.txt')\n",
+    "test = []\n",
+    "test2 = []\n",
+    "for line in fhand:\n",
+    "    line = line.rstrip()\n",
+    "    #x = re.findall('^[A-Z][A-Za-z].*', line):\n",
+    "    #x = re.findall('New Revision.*([0-9][0-9]+)', line)\n",
+    "    #x = re.findall('^New Revision: ([0-9.]+)', line)\n",
+    "    x = re.findall('^New\\sRevision:\\s([0-9.]+)', line)\n",
+    "    if len(x) > 0:\n",
+    "        #print(x[0])\n",
+    "        #num = int(x[0])\n",
+    "        test.append(x)\n",
+    "        count += 1\n",
+    "        total += int(x[0])\n",
+    "avg = total/count\n",
+    "print ('Count is %d, \\nTotal is %g \\nAnd average is %g' %(count,total,avg))\n",
+    "fhand.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Chapter 12 Networked Programs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Practice 1\n",
+    "\n",
+    "import socket\n",
+    "mysock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "mysock.connect(('data.pr4e.org', 80))\n",
+    "cmd = 'GET http://data.pr4e.org/romeo.txt HTTP/1.0\\r\\n\\r\\n'.encode()\n",
+    "mysock.send(cmd)\n",
+    "while True:\n",
+    "    data = mysock.recv(20)\n",
+    "    if (len(data) < 1):\n",
+    "        break\n",
+    "    print(data.decode(),end='')\n",
+    "mysock.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Practice 1\n",
+    "import socket\n",
+    "import time\n",
+    "HOST = 'data.pr4e.org'\n",
+    "PORT = 80\n",
+    "mysock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "mysock.connect((HOST, PORT))\n",
+    "mysock.sendall(b'GET http://data.pr4e.org/cover3.jpg HTTP/1.0\\r\\n\\r\\n')\n",
+    "count = 0\n",
+    "picture = b\"\"\n",
+    "while True:\n",
+    "    data = mysock.recv(5120)\n",
+    "    if (len(data) < 1): break\n",
+    "    time.sleep(0.25)\n",
+    "    count = count + len(data)\n",
+    "    print(len(data), count)\n",
+    "    picture = picture + data\n",
+    "mysock.close()\n",
+    "# Look for the end of the header (2 CRLF)\n",
+    "pos = picture.find(b\"\\r\\n\\r\\n\")\n",
+    "print('Header length', pos)\n",
+    "print(picture[:pos].decode())\n",
+    "# Skip past the header and save the picture data\n",
+    "picture = picture[pos+4:]\n",
+    "fhand = open(\"C:\\\\Users\\\\ashish.sisodia\\\\Desktop\\\\Python\\\\Files\\\\stuff.jpg\", \"wb\")\n",
+    "fhand.write(picture)\n",
+    "fhand.close()"
    ]
   }
  ],
